--- a/examples/notebooks/cart_on_track_1D_comparison_of_controllers.ipynb
+++ b/examples/notebooks/cart_on_track_1D_comparison_of_controllers.ipynb
@@ -159,8 +159,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 5.05 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "10000 loops, best of 3: 81.4 µs per loop\n"
+      "The slowest run took 5.87 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 87.7 µs per loop\n"
      ]
     }
    ],
@@ -194,7 +194,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17e32f6ad0>"
+       "<matplotlib.legend.Legend at 0x7fd377e5ead0>"
       ]
      },
      "execution_count": 7,
@@ -261,7 +261,7 @@
       "         For more information visit http://projects.coin-or.org/Ipopt\n",
       "******************************************************************************\n",
       "\n",
-      "100 loops, best of 3: 3.27 ms per loop\n"
+      "100 loops, best of 3: 3.3 ms per loop\n"
      ]
     }
    ],
@@ -280,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 3.04 s per loop\n"
+      "1 loop, best of 3: 3.05 s per loop\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17e0591d50>"
+       "<matplotlib.legend.Legend at 0x7fd3750fbd50>"
       ]
      },
      "execution_count": 11,
@@ -398,8 +398,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 6.58 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "10000 loops, best of 3: 22.2 µs per loop\n"
+      "The slowest run took 6.49 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 24.2 µs per loop\n"
      ]
     }
    ],
@@ -418,7 +418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 loop, best of 3: 62.5 ms per loop\n"
+      "1 loop, best of 3: 61.8 ms per loop\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17dfc6fd10>"
+       "<matplotlib.legend.Legend at 0x7fd3747dbd10>"
       ]
      },
      "execution_count": 16,
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 4.51 ms per loop\n"
+      "100 loops, best of 3: 4.81 ms per loop\n"
      ]
     }
    ],
@@ -540,7 +540,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17de837750>"
+       "<matplotlib.legend.Legend at 0x7fd3733a4790>"
       ]
      },
      "execution_count": 20,
@@ -9554,7 +9554,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 loops, best of 3: 83.1 µs per loop\n"
+      "10000 loops, best of 3: 90.5 µs per loop\n"
      ]
     }
    ],
@@ -9590,7 +9590,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17ddfae590>"
+       "<matplotlib.legend.Legend at 0x7fd372b12590>"
       ]
      },
      "execution_count": 27,
@@ -9655,7 +9655,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 2.62 ms per loop\n"
+      "100 loops, best of 3: 2.97 ms per loop\n"
      ]
     }
    ],
@@ -9691,7 +9691,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17ddea2410>"
+       "<matplotlib.legend.Legend at 0x7fd372a09410>"
       ]
      },
      "execution_count": 31,
@@ -9758,7 +9758,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 6.47 ms per loop\n"
+      "100 loops, best of 3: 6.43 ms per loop\n"
      ]
     }
    ],
@@ -9796,7 +9796,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17decbe310>"
+       "<matplotlib.legend.Legend at 0x7fd3738212d0>"
       ]
      },
      "execution_count": 35,
@@ -20672,8 +20672,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 5.53 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "10000 loops, best of 3: 34 µs per loop\n"
+      "The slowest run took 7.94 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 27.6 µs per loop\n"
      ]
     }
    ],
@@ -20709,7 +20709,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17dde53790>"
+       "<matplotlib.legend.Legend at 0x7fd3703e9710>"
       ]
      },
      "execution_count": 42,
@@ -20873,7 +20873,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 loops, best of 3: 142 µs per loop\n"
+      "10000 loops, best of 3: 108 µs per loop\n"
      ]
     }
    ],
@@ -20915,7 +20915,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17e3a24250>"
+       "<matplotlib.legend.Legend at 0x7fd3785871d0>"
       ]
      },
      "execution_count": 47,
@@ -20982,7 +20982,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 5.37 ms per loop\n"
+      "100 loops, best of 3: 4.01 ms per loop\n"
      ]
     }
    ],
@@ -21024,7 +21024,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17e2b92d10>"
+       "<matplotlib.legend.Legend at 0x7fd3776f7c90>"
       ]
      },
      "execution_count": 51,
@@ -21093,7 +21093,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 12.2 ms per loop\n"
+      "100 loops, best of 3: 8.86 ms per loop\n"
      ]
     }
    ],
@@ -21137,7 +21137,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17d6ddb390>"
+       "<matplotlib.legend.Legend at 0x7fd36b91d3d0>"
       ]
      },
      "execution_count": 55,
@@ -28395,7 +28395,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f17d66b2e10>"
+       "<matplotlib.legend.Legend at 0x7fd36b4aae90>"
       ]
      },
      "execution_count": 61,
