--- a/examples/notebooks/double_pendulum_2D_comparison_of_controllers.ipynb
+++ b/examples/notebooks/double_pendulum_2D_comparison_of_controllers.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will revisit that good ol' control problem: the double pendulum. In our minds it is the archetype of a robot arm, made with two links and two actuated revolute joints.\n",
+    "Here we will revisit that good ol' control problem: the double pendulum. It is the archetype of a robot arm, made with two links and two actuated revolute joints.\n",
     "\n",
     "We have $\\mathbf{q}=[q_1,q_2]^T\\in\\mathbb{R}^2$ as the joint angles, each link has a uniformly distributed mass: $M_1,M_2$, each link has a length: $l_1,l_2$ giving the Cartesian position of the end-effector such that:\n",
     "$$\n",
@@ -145,7 +145,7 @@
     "G_2 = g_2*cs.cos(q[0]+q[1])\n",
     "G = cs.vertcat(G_1,\n",
     "               G_2)\n",
-    "# Then dynamic parameters as functions:\n",
+    "# Then dynamic parameters as casadi functions:\n",
     "fM = cs.Function(\"fM\", [q], [M],\n",
     "                [\"q\"], [\"M\"])\n",
     "fC = cs.Function(\"fC\", [q,dq], [C],\n",
@@ -242,6 +242,8 @@
       "#1: speed_limit_cnstr\n",
       "#2: table_midpoint_cnstr\n",
       "#3: table_endpoint_cnstr\n",
+      "Has virtual var: False\n",
+      "Has input var: False\n",
       "N constraints: 4\n",
       "N equality:\n",
       "\tPos:1\tVel:0\n",
@@ -301,8 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 6.52 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "10000 loops, best of 3: 121 µs per loop\n"
+      "10000 loops, best of 3: 163 µs per loop\n"
      ]
     }
    ],
@@ -511,7 +512,7 @@
       "         For more information visit http://projects.coin-or.org/Ipopt\n",
       "******************************************************************************\n",
       "\n",
-      "100 loops, best of 3: 2.59 ms per loop\n"
+      "100 loops, best of 3: 3.77 ms per loop\n"
      ]
     }
    ],
@@ -716,6 +717,8 @@
       "#1: speed_limit_cnstr\n",
       "#2: table_midpoint_cnstr\n",
       "#3: table_endpoint_cnstr\n",
+      "Has virtual var: False\n",
+      "Has input var: False\n",
       "N constraints: 4\n",
       "N equality:\n",
       "\tPos:1\tVel:0\n",
